<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginEnd="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium"
			android:text="@string/card_caption_office"
			android:textSize="16sp"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium"
			android:background="@android:color/darker_gray"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tvRoomCaption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_caption_room"/>

		<de.marcelgross.lecturer_lib.generic.customView.AttributeView
			android:id="@+id/tvRoomValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tvAddressCaption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_caption_address"/>

		<de.marcelgross.lecturer_lib.generic.customView.AttributeView
			android:id="@+id/tvAddressValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/card_link_color"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginEnd="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium"
			android:text="@string/card_caption_contact"
			android:textSize="16sp"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium"
			android:background="@android:color/darker_gray"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tvEmailCaption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_caption_email"/>

		<de.marcelgross.lecturer_lib.generic.customView.AttributeView
			android:id="@+id/tvEmailValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/card_link_color"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tvPhoneCaption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_caption_phone"/>

		<de.marcelgross.lecturer_lib.generic.customView.AttributeView
			android:id="@+id/tvPhoneValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/card_link_color"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tvWebsiteCaption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_caption_website"/>

		<de.marcelgross.lecturer_lib.generic.customView.AttributeView
			android:id="@+id/tvWebsiteValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/card_link_color"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/spacing_medium"
		android:layout_marginRight="@dimen/spacing_medium"
		android:layout_marginTop="@dimen/spacing_medium"
		android:orientation="horizontal">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_caption_charge"/>

		<Button
			android:id="@+id/charges_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/show_charges"/>

	</LinearLayout>

</LinearLayout>

