<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<de.marcelgross.lecturer_lib.customView.AttributeInput
			android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			custom:hintText="@string/title"
			custom:inputType="text"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:text="@string/start_date"/>

			<de.marcelgross.lecturer_lib.customView.DateTimeView
				android:id="@+id/startDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:text="@string/end_date"/>

			<de.marcelgross.lecturer_lib.customView.DateTimeView
				android:id="@+id/endDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"/>

		</LinearLayout>

	</LinearLayout>
</ScrollView>