<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/detailCardView"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/card_caption_office"
			android:id="@+id/tvCardHeader"
			android:textSize="16sp"
			android:layout_gravity="end"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginEnd="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@android:color/darker_gray"
			android:id="@+id/separator"
			android:layout_marginTop="@dimen/spacing_medium"
			android:layout_marginLeft="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium" />

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/contentRoom"
			android:layout_marginLeft="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/card_caption_room"
				android:id="@+id/tvRoomCaption"
				android:layout_weight="2" />

			<de.marcelgross.lecturer_lib.customView.AttributeView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/tvRoomValue"
				android:layout_weight="1" />
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/contentAddress"
			android:layout_marginLeft="@dimen/spacing_medium"
			android:layout_marginRight="@dimen/spacing_medium"
			android:layout_marginTop="@dimen/spacing_medium" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/card_caption_address"
				android:id="@+id/tvAddressCaption"
				android:layout_weight="2" />

			<de.marcelgross.lecturer_lib.customView.AttributeView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/tvAddressValue"
				android:layout_weight="1"
				android:textColor="@color/card_link_color" />
		</LinearLayout>

	</LinearLayout>

</android.support.v7.widget.CardView>
